objects/Campaign_Member_Criteria_Group__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Criteria Groups</relationshipLabel>
        <relationshipName>Campaign_Member_Criteria_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inner_Operator__c</fullName>
        <label>Inner Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outer_Operator__c</fullName>
        <label>Outer Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WM_CriteriaGroup_Id__c</fullName>
        <externalId>true</externalId>
        <label>WM CriteriaGroup Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WM_Parent_group_Id__c</fullName>
        <label>WM Parent group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Campaign Member Criteria Group</label>
    <nameField>
        <displayFormat>CMCG{000000000}</displayFormat>
        <label>Campaign Member Criteria Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Criteria Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>